[package]
name = "lustre"
version = "0.1.0"
edition = "2021"

[lib]
name = "lustre_library"
path = "src/lib.rs"

[[bin]]
name = "lustre"
path = "src/engine/bin/lustre.rs"

[[bin]]
name = "test_game"
path = "src/game/bin/test_game.rs"

[dependencies]
bincode = "1.3.3"
bytemuck = "1.21.0"
chrono = { version = "0.4.40", features = ["serde"] }
clap = "4.5.31"
config = "0.15.8"
dirs = "6.0.0"
fern = { version = "0.7.1", features = ["colored"] }
gltf = "1.4.1"
image = "0.25.5"
log = "0.4.25"
nalgebra = "0.33.2"
noise = "0.9.0"
once_cell = "1.20.3"
rand = "0.9.0"
rayon = "1.10.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_toml = "0.0.1"
shaderc-sys = "0.8.3"
smallvec = "1.14.0"
specs = "0.20.0"
toml = "0.8.20"
vulkano = "0.35.1"
vulkano-macros = "0.35.0"
vulkano-shaders = "0.35.0"
vulkano-util = "0.35.0"
winit = { version = "0.30.9", features = ["x11", "wayland", "rwh_06", "rwh_05", "serde"] }

[profile.release]
debug = true
